--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -14,6 +14,16 @@ window#waybar {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
+#custom-updates {
+    color: @text-white;
+    background: @mbg-gray;
+    margin: 5px 8px 5px 8px;
+    padding: 2px 4px 2px 4px;
+    border: 1px solid;
+    border-radius: 7px;
+    border-color: @mrd-gray;
+}
+
 #tray {
     color: @text-black;
     background: @mbg-gray;
@@ -69,7 +79,7 @@ window#waybar {
     color: @text-white;
     background: @mbg-gray;
     margin: 5px 3px 5px 3px;
-    padding: 2px 10px 2px 7px;
+    padding: 2px 15px 2px 12px;
     border: 1px solid;
     border-radius: 7px;
     border-color: @brd-gray;
